assets/style.scss
@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
@import url("https://fonts.googleapis.com/css?family=Raleway:700");

$font-size: 18px;
$primary: #5a6dd5;
$secondary: #9f64ff;
$white: rgba(255, 255, 255, 0.9);
$white--faded: rgba(255, 255, 255, 0.6);
$font-family: "Open Sans",
Arial,
Helvetica,
sans-serif;

html {

    body {
        box-sizing: border-box;
        min-height: 100%;
        font-size: $font-size;
        font-family: $font-family;
    }
}

a {
    color: $white;
    font-style: italic;
    text-decoration: underline;

    &:hover {
        color: white;
    }
}

.text--center {
    text-align: center;
}

.margin-top-50 {
    margin-top: 50px;
}

.no-margin {
    margin: 0px !important;
}

.padding-top-100 {
    padding-top: 100px;
}

.button--home {
    font-size: 5em;
    float: left;
}

.button--syntax {
    float: right;
    font-size: 2em;
    margin: 10px 15px;
}

.section__spf-wizard {
    background-image: linear-gradient($primary, $secondary);

    overflow-y: scroll;
    height: 100%;

    .overlay {
        background-image: url(images/overlay-left.png);
        background-repeat: no-repeat;
        background-size: contain;
        max-height: 1200px;
        background-position: left center;
        padding: 100px 0px;
    }

    h1 {
        text-align: center;
        color: $white;
        font-weight: 700;
        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
        font-family: 'Raleway';
        text-transform: uppercase;
    }

    .img__wrapper {
        display: grid;
        place-items: center center;
    }

    .logo {
        max-height: 80px;
        margin-bottom: 20px;
    }

    .btn__submit {
        color: $white;
        border: 1px solid $white;
        background: transparent;
        padding: 5px 20px;
        cursor: pointer;
    }

    .form-control {
        font-size: $font-size;
        color: $white;
        background: transparent;
        border-top: none;
        border-right: none;
        border-left: none;
        border-radius: 0;
        border-bottom: 2px solid $white;

        &::placeholder {
            color: $white--faded;
        }
    }

    .form-check-label {
        color: $white;

        span {
            color: $white--faded;
        }
    }

    .form-group {
        margin-bottom: 70px;
    }

    .input {

        &__answer {
            height: 2em;
            padding-left: 1em;
            background: rgba(255, 255, 255, 0.4);
            box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
            text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
            color: white;
            font-weight: 700;
            width: 100%;
            max-width: 1000px;
            border: none !important;
            font-size: 1.2em;
            border-radius: 3px;
            transition: ease 0.3s;

            &__wrapper {
                display: grid;
                grid-template-columns: auto 1fr 20px;
                width: 100%;
                grid-gap: 20px;
                align-items: center;
                margin: 50px 0;
                transition: ease 0.3s;
            }

            &__copy {
                color: white;
                margin-left: -55px;
                cursor: pointer;
                font-size: 1.5em;
                z-index: 3;
            }
        }

        &__label {
            color: $white;
            font-size: 1.2em;
            margin-bottom: 10px;
            font-weight: 700;

            a {
                color: $white;
            }

            .fa-question-circle {
                font-size: 0.8em;
                margin-bottom: 10px;
            }
        }
    }

    .form__advanced-options {
        background: rgba(255, 255, 255, 0.2);
        padding: 20px 30px;
        border-radius: 5px;
        margin-bottom: 50px;

        &__title {
            color: $white;
            font-size: 1.5em;
            margin-bottom: 20px;
            font-weight: 700;
            text-transform: uppercase;
            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
            font-family: 'Raleway';
        }
    }

}

.syntax {

    p,
    li {
        color: $white;
        line-height: 2em;
        font-size: 1.2em;
    }

    h2,
    h3,
    h4,
    strong {
        color: $white;
        line-height: 3em;
    }

    h2 {
        font-size: 2em;
        font-weight: 700;
        text-transform: uppercase;
        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
        font-family: 'Raleway';
        text-align: center;
    }

    h3 {
        @extend h2;
        font-size: 1.5em;
        font-style: italic;
        margin-top: 50px;
    }

    h4 {
        line-height: 0.5em;
        color: $white--faded;
        font-size: 3em;
        margin-top: 70px;
    }

    &__intro {
        p:first-child::first-letter {
            float: left;
            font-size: 5em;
            color: $white--faded;
        }
    }

    .fa-li {
        margin-top: 5px;
    }

    li {
        margin-bottom: 1em;
        line-height: 1.5em;
    }

    .code-block {
        background: rgba(255, 255, 255, 0.2);
        padding: 0 5px;
        font-family: monospace;
    }
}


.built-by {
    &__background {
        background-image: url(images/heart.png);
        background-size: contain;
        background-position: center center;
        background-repeat: no-repeat;
        position: absolute;
        bottom: 0px;
        right: 20px;
        height: 200px;
        width: 200px;
        padding: 70px 0;
        transform: rotate(-10deg);
        transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.3s;

        &:hover {
            transform: rotate(10deg);
        }

        @media (max-width: 1200px) {
            position: relative;
        }
    }

    &__text {
        text-align: center;
        color: $white;
        font-size: $font-size !important;
        line-height: 1.5em !important;
    }
}

.footer {
    width: 100%;

    p {
        color: $white--faded;
        text-align: center;
    }
}

